--- a/proto-app/src/app/shared/components/input/input.component.html
+++ b/proto-app/src/app/shared/components/input/input.component.html
@@ -1,3 +1,26 @@
-<p>
-  input works!
-</p>
+<!-- label, control panel, info button, info, border, validation -->
+<!-- 2x label, 2x radio button -->
+
+<div class="form-row" (click)="showInfo()" [class.validation-error]="hasValidationError()">
+
+    <!-- (optional) row label -->
+    <!-- <span class="row-label" *ngIf="config.rowLabel">{{config.rowLabel}}</span> -->
+    <span class="row-label">{{config.rowLabel}}</span>
+
+    <!-- control panel -->
+    <div class="control-panel">
+  
+      <!-- input -->
+      <input id="{{config.name}}" type="date" class="app-input" [(ngModel)]="selectedValue">
+  
+    </div>
+  
+    <!-- (optional) info icon -->
+    <span *ngIf="config.infoText" class="info-icon" (click)="toggleInfo()">*</span>
+  
+    <!-- (optional) info panel -->
+    <div *ngIf="config.showInfo" class="info-panel">
+      <span class="info-text" [innerHtml]="config.infoText"></span>
+    </div>
+  
+  </div>
