--- a/proto-app/src/app/modules/pages/page010-situation/page010-situation.component.html
+++ b/proto-app/src/app/modules/pages/page010-situation/page010-situation.component.html
@@ -1,32 +1,39 @@
 <!-- page header -->
 <span class="page-header" [innerHTML]="properties.pageHeader"></span>
 
+<!-- situation form -->
 <form [formGroup]="form">
 
-  <!-- <app-form-group formGroupName="situationGroup"> -->  <!-- title, description, validation -->
+
+  <!-- situation group -->
+  <!-- validation -->
+  <div formGroupName="situationGroup" class="form-group-panel">
+
+    <!-- group title, description -->
+    <span class="group-title" [innerHTML]="properties.situationGroup_title"></span>
+    <span class="group-description" [innerHTML]="properties.situationGroup_description"></span>
 
     <!-- situation select -->
-    <app-radio formControlName="situationChoice" [config]="situationChoiceConfig" ></app-radio>
+    <app-radio formControlName="situationChoice" [config]="situationChoiceConfig"></app-radio>
     <!-- label, control panel, info button, info, border, validation errors -->
     <!-- 2x label, 2x radio button -->
 
     <!-- insurance begin select -->
-    <app-radio formControlName="insuranceBeginChoice" [config]="insuranceBeginChoiceConfig" *ngIf="isVisibleInsuranceBeginChoice()"></app-radio>
+    <app-radio formControlName="insuranceBeginChoice" [config]="insuranceBeginChoiceConfig"
+      *ngIf="isVisibleInsuranceBeginChoice()"></app-radio>
     <!-- label, control panel, info, border -->
     <!-- 2x radio button (requires parent app-form-row) -->
 
     <!-- insurance begin date -->
-    <!--
-    <app-input formControlName="insuranceBeginDate" [config]="insuranceBeginDateConfig"></app-input>
-    -->
-    <input type="date" formControlName="insuranceBeginDate" *ngIf="isVisibleInsuranceBeginDate()">
+    <app-input formControlName="insuranceBeginDate" [config]="insuranceBeginDateConfig" 
+      *ngIf="isVisibleInsuranceBeginDate()"></app-input>
     <!-- label, control panel, info, border -->
     <!-- input date (requires parent app-form-row) -->
 
-  <!-- </app-form-group> -->
+  </div>
 
   <p></p>
-  <button type="submit" (click)="onSubmit()">Submit</button>
+  <button type="submit" (click)="onSubmit()" [innerHtml]="properties.submitButton_label"></button>
   <p></p>
   <button (click)="test()">Test</button>
 
