--- a/proto-app/src/app/modules/pages/page010-situation/page010-situation.component.html
+++ b/proto-app/src/app/modules/pages/page010-situation/page010-situation.component.html
@@ -30,6 +30,9 @@
     <!-- label, control panel, info, border -->
     <!-- input date (requires parent app-form-row) -->
 
+    <!-- test select -->
+    <app-select formControlName="testSelect" [config]="testSelectConfig"></app-select>
+
   </div>
 
   <p></p>
