--- a/proto-app/src/app/shared/components/form-row/form-row.component.html
+++ b/proto-app/src/app/shared/components/form-row/form-row.component.html
@@ -1,17 +1,15 @@
 <!-- label, control panel, info button, info, border, validation -->
-<!-- 2x label, 2x radio button -->
 
-<div class="form-row" (click)="showInfo()" >
+<div class="form-row" (click)="showInfo()">
 
     <!-- (optional) row label -->
-    <!-- <span class="row-label" *ngIf="config.rowLabel">{{config.rowLabel}}</span> -->
-    <span class="row-label">{{config.rowLabel}}</span>
-
+    <span class="row-label" *ngIf="config.rowLabel">{{config.rowLabel}}</span>
+  
     <!-- control panel -->
     <div class="control-panel">
-  
-      <!-- input -->
-      <input id="{{config.name}}" type="date" class="app-input" [(ngModel)]="selectedValue">
+
+        <!-- input controls come here -->
+        <ng-content></ng-content>
   
     </div>
   
