--- a/proto-app/src/styles.css
+++ b/proto-app/src/styles.css
@@ -40,16 +40,6 @@ form {
     background-color: rgb(208, 255, 137);
 }
 
-.form-row {
-    border-bottom-style: solid;
-    margin-bottom: 10px;
-    padding: 5px;
-    border-color: lightgray;
-    background-color: #f5f5f5;
-    box-shadow: 6px 4px #e1e0e0;
-    display: flex;
-}
-
 app-radio.ng-invalid.ng-touched  .form-row , app-radio.ng-invalid.ng-dirty  .form-row {
     background-color: #ffcdcd;
 }
@@ -58,19 +48,8 @@ app-select.ng-invalid.ng-touched  .form-row , app-select.ng-invalid.ng-dirty  .f
     background-color: #ffcdcd;
 }
 
-.row-label {
-    flex: 0 0 40%;
-    max-width: 40%;
-}
-
-.control-panel {
-    flex: 0 0 57%;
-    max-width: 57%;
-}
-
-.info-icon {
-    flex: 0 0 3%;
-    max-width: 3%;
+app-input.ng-invalid.ng-touched  .form-row , app-input.ng-invalid.ng-dirty  .form-row {
+    background-color: #ffcdcd;
 }
 
 .info-panel {
@@ -79,3 +58,6 @@ app-select.ng-invalid.ng-touched  .form-row , app-select.ng-invalid.ng-dirty  .f
     width: 170px;
 }
 
+app-input.appended .form-row {
+    margin-top: 0px;
+}
