first page complete

--- a/proto-app/src/app/app.component.html
+++ b/proto-app/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div style="text-align:center">
-  <h1> Proto </h1>
+</div>
+
+<div id="header-panel">
+  <app-header></app-header>
 </div>
 
 <div id="content-panel">
   <div id="form-panel">
-    <app-page010-situation></app-page010-situation>
+    <app-page-list></app-page-list>
   </div>
 
   <div id="info-placeholder-panel">
