--- a/proto-app/src/app/shared/components/form-row/form-row.component.css
+++ b/proto-app/src/app/shared/components/form-row/form-row.component.css
@@ -1,26 +1,34 @@
 .form-row {
-    /* border-bottom-style: solid; */
-    margin-top: 10px;
-    padding: 5px;
-    border-color: lightgray;
-    background-color: #f5f5f5;
-    box-shadow: 6px 4px #e1e0e0;
     display: flex;
+    /* border-bottom-style: solid; */
+    /* margin-top: 10px; */
+    padding: 5px;
+    background-color: #f8f8f8;
+    border-right: 8px #f8f8f8 solid;
+    box-shadow: 6px 4px #e1e0e0;
+    font-size: medium;
+    position: relative;  /* required for absolute positioning of the info-panel */
 }
 
 .label-panel {
     flex: 0 0 40%;
     max-width: 40%;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .control-panel {
     flex: 0 0 57%;
     max-width: 57%;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .info-icon-panel {
     flex: 0 0 3%;
     max-width: 3%;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .info-icon {
