--- a/proto-app/src/app/shared/components/form-row/form-row.component.html
+++ b/proto-app/src/app/shared/components/form-row/form-row.component.html
@@ -17,7 +17,7 @@
 
   <!-- (optional) info icon -->
   <div class="info-icon-panel">
-    <span *ngIf="config.infoText" class="info-icon" (click)="toggleInfo()">*</span>
+    <span *ngIf="config.infoText" class="info-icon" (click)="toggleInfo($event)">*</span>
   </div>
 
   <!-- (optional) info panel -->
