--- a/proto-app/src/app/modules/pages/page-list/page-list.component.html
+++ b/proto-app/src/app/modules/pages/page-list/page-list.component.html
@@ -1,7 +1,7 @@
 <!-- situation [0]-->
 <div class="page-list-item">
-    <div *ngIf="pageConfigs[0].isShowHeader()" class="page-list-item-header" [class.active]="pageConfigs[0].isShowEditor()"
-        (click)="pageHeaderClicked(0)">
+    <div *ngIf="pageConfigs[0].isShowHeader()" class="page-list-item-header"
+        [class.active]="pageConfigs[0].isShowEditor()" (click)="pageHeaderClicked(0)">
         <span>{{pageConfigs[0].pageHeaderTitle}}</span>
     </div>
 
@@ -20,8 +20,8 @@
 
 <!-- vehicle [1] -->
 <div class="page-list-item">
-    <div *ngIf="pageConfigs[1].isShowHeader()" class="page-list-item-header" [class.active]="pageConfigs[1].isShowEditor()"
-        (click)="pageHeaderClicked(1)">
+    <div *ngIf="pageConfigs[1].isShowHeader()" class="page-list-item-header"
+        [class.active]="pageConfigs[1].isShowEditor()" (click)="pageHeaderClicked(1)">
         <span>{{pageConfigs[1].pageHeaderTitle}}</span>
     </div>
 
@@ -29,7 +29,7 @@
         <app-page020-vehicle (confirmed)="pageConfirmed(1)"></app-page020-vehicle>
     </div>
     <div *ngIf="pageConfigs[1].isShowViewer()" class="page-list-item-panel" @myInsertRemoveTrigger>
-        <span>Viewer for vehicle data ...</span>
+        <app-page020-vehicle-viewer></app-page020-vehicle-viewer>
     </div>
     <div *ngIf="pageConfigs[1].isShowViewer()" class="page-modify-button-panel">
         <button class="page-modify-button" (click)="pageModifyClicked($event,1)">
@@ -40,8 +40,8 @@
 
 <!-- third page [2] -->
 <div class="page-list-item">
-    <div *ngIf="pageConfigs[2].isShowHeader()" class="page-list-item-header" [class.active]="pageConfigs[2].isShowEditor()"
-        (click)="pageHeaderClicked(2)">
+    <div *ngIf="pageConfigs[2].isShowHeader()" class="page-list-item-header"
+        [class.active]="pageConfigs[2].isShowEditor()" (click)="pageHeaderClicked(2)">
         <span>{{pageConfigs[2].pageHeaderTitle}}</span>
     </div>
 
@@ -60,8 +60,8 @@
 
 <!-- fourth page [3] -->
 <div class="page-list-item">
-    <div *ngIf="pageConfigs[3].isShowHeader()" class="page-list-item-header" [class.active]="pageConfigs[3].isShowEditor()"
-        (click)="pageHeaderClicked(3)">
+    <div *ngIf="pageConfigs[3].isShowHeader()" class="page-list-item-header"
+        [class.active]="pageConfigs[3].isShowEditor()" (click)="pageHeaderClicked(3)">
         <span>{{pageConfigs[3].pageHeaderTitle}}</span>
     </div>
 
