--- a/proto-app/src/app/shared/components/form-row/form-row.component.css
+++ b/proto-app/src/app/shared/components/form-row/form-row.component.css
@@ -18,8 +18,8 @@
 }
 
 .control-panel {
-    flex: 0 0 57%;
-    max-width: 57%;
+    flex: 0 0 55%;
+    max-width: 55%;
     padding-top: 5px;
     padding-bottom: 5px;
 }
@@ -32,5 +32,8 @@
 }
 
 .info-icon {
-    padding-left: 5px;
+    padding-left: 15px;
+    padding-top: 3px;
+    width: 18px;
+    height: 18px;
 }
