--- a/proto-app/src/app/shared/components/input/input.component.html
+++ b/proto-app/src/app/shared/components/input/input.component.html
@@ -1,6 +1,6 @@
 <!-- label, control panel, info button, info, border, validation -->
 <app-form-row [config]="config">
 
-  <input id="{{config.name}}" type="date" class="app-input" [(ngModel)]="selectedValue">
+  <input id="{{config.name}}" type="text" class="app-input" [(ngModel)]="selectedValue">
 
 </app-form-row>
