transfer all local changes

--- a/proto-app/src/app/modules/pages/page-list/page-list.component.css
+++ b/proto-app/src/app/modules/pages/page-list/page-list.component.css
@@ -26,6 +26,11 @@
     color: white;
 }
 
+.page-list-item-header.collapsed span::after {
+    content: " ...";
+    font-weight: bolder;
+}
+
 .page-list-item-panel {
     margin-top: 15px;
     /* background-color: white; */
