--- a/proto-app/src/app/shared/components/header/header.component.html
+++ b/proto-app/src/app/shared/components/header/header.component.html
@@ -7,6 +7,6 @@
     <!-- <img id="phone-icon" src="assets/verti-logo.svg"> -->
     <span id="telephone-number">030 - 890 003 003</span>
 
-    <button id="toggle-language-button" (click)="toggleLanguage()">toggle language</button>
+    <img id="language-icon" [src]="languageImage" (click)="toggleLanguage($event)">
 
 </div>
