--- a/proto-app/src/app/shared/components/input/input.component.html
+++ b/proto-app/src/app/shared/components/input/input.component.html
@@ -1,6 +1,9 @@
 <!-- label, control panel, info button, info, border, validation -->
 <app-form-row [config]="config">
 
-  <input id="{{config.name}}" type="text" class="app-input" [(ngModel)]="selectedValue">
+  <input id="{{config.name}}" type="text" class="app-input" [class.with-postfix]="config.hasPostfix()"
+  [(ngModel)]="selectedValue">
+
+  <span *ngIf="config.hasPostfix()">{{config.postfix}}</span>
 
 </app-form-row>
