--- a/proto-app/src/app/shared/components/form-row/form-row.component.html
+++ b/proto-app/src/app/shared/components/form-row/form-row.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <!-- (optional) info icon -->
-  <div class="info-icon-panel">
+  <div *ngIf="config.isInfoAvailable()" class="info-icon-panel">
     <img class="info-icon" src="assets/info.png" (click)="toggleInfo($event)">
   </div>
 
