--- a/proto-app/src/app/common/components/form-row/form-row.component.html
+++ b/proto-app/src/app/common/components/form-row/form-row.component.html
@@ -7,21 +7,30 @@
     <span class="row-label" *ngIf="config.rowLabel">{{config.rowLabel}}</span>
   </div>
 
-  <!-- control panel -->
-  <div class="control-panel">
+  <div class="content-panel">
 
-    <!-- input controls come here -->
-    <ng-content></ng-content>
+    <!-- control panel -->
+    <div class="control-panel">
+
+      <!-- input controls come here -->
+      <ng-content></ng-content>
+
+    </div>
+
+    <!-- (optional) error panel -->
+    <div class="error-panel" *ngIf="hasErrorMsg()">
+      <!-- <span [innerHtml]="getErrorMsg()"></span> -->
+    </div>
 
   </div>
 
   <!-- (optional) info icon -->
-  <div *ngIf="config.isInfoAvailable()" class="info-icon-panel">
+  <div class="info-icon-panel" *ngIf="config.isInfoAvailable()">
     <img class="info-icon" src="assets/info.png" (click)="toggleInfo($event)">
   </div>
 
   <!-- (optional) info panel -->
-  <div *ngIf="config.showInfo" class="info-panel">
+  <div class="info-panel" *ngIf="config.showInfo">
     <span class="info-text" [innerHtml]="config.infoText"></span>
   </div>
 
