--- a/proto-app/src/app/common/components/form-row/form-row.component.scss
+++ b/proto-app/src/app/common/components/form-row/form-row.component.scss
@@ -1,3 +1,5 @@
+@import "src/variables";
+
 .form-row {
     display: flex;
     /* border-bottom-style: solid; */
@@ -17,11 +19,20 @@
     padding-bottom: 5px;
 }
 
-.control-panel {
+.content-panel {
     flex: 0 0 55%;
     max-width: 55%;
+}
+
+.control-panel {
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+.error-panel {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: $color-error;
 }
 
 .info-icon-panel {
