--- a/proto-app/src/app/common/components/form-row/form-row.component.html
+++ b/proto-app/src/app/common/components/form-row/form-row.component.html
@@ -19,7 +19,7 @@
 
     <!-- (optional) error panel -->
     <div class="error-panel" *ngIf="hasErrorMsg()">
-      <!-- <span [innerHtml]="getErrorMsg()"></span> -->
+      <span [innerHtml]="getErrorMsg()"></span>
     </div>
 
   </div>
